--- a/.github/workflows/train_daily.yml
+++ b/.github/workflows/train_daily.yml
@@ -1,7 +1,11 @@
 name: train-daily
+
+permissions:
+  contents: write
+
 on:
   schedule:
-    - cron: "5 0 * * *"  # daily at 00:05 UTC
+    - cron: "0 19 * * *"  # daily at 12:00 PKT
   workflow_dispatch:
 
 jobs:
