--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,8 @@ joblib==1.3.2
 # UI (optional for later steps)
 streamlit==1.36.0
 gradio==4.44.0
+shap
+matplotlib
 
 # Hopsworks: install in CI (Linux) only, not on Windows dev machine
 hopsworks>=3.4,<4.0 ; sys_platform != "win32"
