--- a/requirements.txt
+++ b/requirements.txt
@@ -37,8 +37,9 @@ joblib==1.3.2
 # UI (optional for later steps)
 streamlit==1.36.0
 gradio==4.44.0
-shap
-matplotlib
+scipy>=1.10
+matplotlib>=3.8
+shap>=0.45.0
 
 # Hopsworks: install in CI (Linux) only, not on Windows dev machine
 hopsworks>=3.4,<4.0 ; sys_platform != "win32"
